# Fabricate

./: README.md  fab.bat  pyproject.toml
fabricate/: __init__.py  __main__.py  scanning.py  script.py  substition.py
fabricate/blueprints/: hatchfiles.py  mit.py  parser.py  proto.py  pygamehide.py  pyscript.py  withchain.py
src/: script.py
src/blueprints/: parser.py  pyscript.py
