[project]
name = "fabricate"
dynamic = ["version"]
description = "Fabricates given blueprint and stores it in the clipboard"
authors = [
    { name = "FloatingInt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "pyperclip>=1.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "src/script.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "src"
]
