[project]
name = "fabricate"
dynamic = ["version"]
description = "Fabricates given blueprint and stores it in the clipboard"
authors = [
    { name = "FloatingInt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "pyperclip==1.8.2",
    "actus~=0.7.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "fabricate/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["fabricate/**", "cl.bat"]
exclude = ["fabricate/**/__pycache__"]
